--- a/turisticos/index.html
+++ b/turisticos/index.html
@@ -15,14 +15,13 @@
       <div id="map"></div>
     </div>
 
-    <div class="container" id="info">
-
-    </div>
+    <div class="container" id="info"></div>
 
     <template id="selector">
-        <ul class="layers-selector">
-        </ul>
+      <ul class="layers-selector"></ul>
     </template>
+
+    <button id="download-btn">Download Map</button>
 
     <script type="module" src="./selector.js"></script>
     <script type="module" src="./main.js"></script>
